Fix navbar toggle btn not visible.

--- a/web/profiles/custom/os2loop/themes/os2loop_theme/assets/navbar.scss
+++ b/web/profiles/custom/os2loop/themes/os2loop_theme/assets/navbar.scss
@@ -16,9 +16,28 @@
   display: block;
 }
 
+// Fix for drop down menu, extending out of viewport when placed on at the right side of the page.
 .dropdown-menu {
   &.position-right {
     left: auto !important;
     right: 0;
+  }
+}
+
+// Toggle icon on mobile menu
+.navbar-toggler {
+  .bi-list {
+    display: none;
+  }
+  .bi-x {
+    display: inline;
+  }
+  &.collapsed {
+    .bi-list {
+      display: inline;
+    }
+    .bi-x {
+      display: none;
+    }
   }
 }
